fixed text wrapping on construction message

--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -53,7 +53,7 @@
   margin: 1rem;
   padding: 3rem;
   background-color: rgb(255, 239, 18);
-  background-image: linear-gradient(60deg, rgb(251, 255, 18), rgb(255, 239, 18));
+  background-image: linear-gradient(60deg, rgba(251, 255, 18, rgba(255, 239, 18, 0.74)239, 18));
   border: 1px solid black;
 
   &__img-box {
@@ -69,7 +69,9 @@
 
   &__text-box {
     position: absolute;
+    margin-right: 1rem;
     top: 40%;
+    left: 1rem;
     transform: translateY(-50%);
     color: rgb(36, 36, 36);
   }
